--- a/public/css/space.css
+++ b/public/css/space.css
@@ -17,9 +17,13 @@
 .tales {
   width: 100%;
 }
-.carousel-inner{
+.carousel-inner {
   width:100%;
   max-height: 500px !important;
+}
+
+.carousel-inner img{
+  width:100%;
 }
 
 
@@ -170,8 +174,8 @@
     float: right;
 }
 
-.hour-picker .btn-default:active, .hour-picker .btn-default.active, 
-.hour-picker .btn-default:active:hover, .hour-picker .btn-default.active:hover, 
+.hour-picker .btn-default:active, .hour-picker .btn-default.active,
+.hour-picker .btn-default:active:hover, .hour-picker .btn-default.active:hover,
 .hour-picker .btn-default:active:focus, .hour-picker .btn-default.active.focus,
 .hour-picker .btn-default:focus, .hour-picker .btn-default.focus{
     background-color: #638aff;
