--- a/views/pages/space.ejs
+++ b/views/pages/space.ejs
@@ -31,7 +31,7 @@
                 <div class="carousel-inner" role="listbox">
                     <% for (var i = 0; i < space.photo.length; i++) {%>
                         <div class="item <% if (i==0){%> active <% } %>">
-                        <img src="<%= space.photo[i].name %>.jpg">
+                        <img src="/images/space/<%= space.id %>/<%= space.photo[i].photo_name %>.jpg">
                         </div>
                     <% } %>
                 </div>
@@ -117,7 +117,7 @@
                         <div class="detail-line col-md-8 col-xs-12">
                             <ul class="row">
                                 <% for (var i = 0; i < space.amenities.length; i++) {%>
-                                <li class="col-md-6 col-xs-12"><span class="icon <%= space.amenities[i].icon %>" aria-hidden="true"></span> <%= space.amenities[i].name %></li>
+                                <li class="col-md-6 col-xs-12"><span class="icon icon-<%= space.amenities[i].icon_image_path %>" aria-hidden="true"></span> <%= space.amenities[i].name %></li>
                                 <% } %>
                             </ul>
                         </div>
