--- a/views/pages/result.ejs
+++ b/views/pages/result.ejs
@@ -26,7 +26,7 @@
                 <a href="#"><div class="login-btn">
                     Login
                 </div></a>
-                <a class="create-btn btn-primary btn" href="/bussiness">
+                <a class="create-btn btn-primary btn" href="/business">
                     <span class="small">List Your space</span>
                 </a>
                 <div class="header-content">
