--- a/views/pages/space.ejs
+++ b/views/pages/space.ejs
@@ -24,6 +24,9 @@
             <a href="#"><div class="login-btn">
                 Login
             </div></a>
+            <a class="create-btn btn-primary btn" href="/business">
+                <span class="small">List Your space</span>
+            </a>
         </div>
         <div class="space-header space-image">
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
