--- a/views/pages/business.ejs
+++ b/views/pages/business.ejs
@@ -26,7 +26,7 @@
                 <a href="#"><div class="login-btn">
                     Login
                 </div></a>
-                <a class="create-btn btn-primary btn" href="/bussiness">
+                <a class="create-btn btn-primary btn" href="/business">
                     <span class="small">List Your space</span>
                 </a>
                 <div class="header-content">
@@ -84,6 +84,7 @@
                     <br><br>
                     “We have seen a 40% increase in bookings since using HourSpace”
                 </div>
+                <div class="testimonial-image2" style="background-image:url('bus-screen.png')"></div>
             </div>
         </div>
         
@@ -97,6 +98,7 @@
                     "Thanks to HourSpace, I am able to cut down my rent 50% by renting the space in free hours"
                 </div>
             </div>
+                <div class="testimonial-image" style="background-image:url('bus-screen2.png')"></div>
         </div>
         <div class="container-fluid bussiness-action">
             <div class="container">
