--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -31,7 +31,7 @@
                 </a>
                 <div class="header-content">
                     <div class="header-content-text">
-                        <h1>Find a space for Power nap</h1>
+                        <h1>Find Your Space</h1>
                         <h5>Hourly rental made easy and simple.</h5>
                     </div>
                     <div class="header-search col-lg-8">
