--- a/views/pages/space.ejs
+++ b/views/pages/space.ejs
@@ -198,7 +198,26 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                        <button type="button" class="buy-btn btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#soonmodal">Next</button>
+                        <button type="button" class="buy-btn btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#thankmodal">Next</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="modal" id="thankmodal" tabindex="-1" role="dialog" aria-labelledby="buymodalLabel">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span class="icon icon-cancel" aria-hidden="true"></span></button>
+                    </div>
+                    <div class="modal-body modal-booking" id="modalbooking">
+                        <div class="input-row"><label>Name</label><input type="text" class="form-control"></div>
+                        <div class="input-row"><label>Email</label><input type="text" class="form-control"></div>
+                        <div class="input-row"><label>Phone number</label><input type="text" class="form-control"></div>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="/thank" class="buy-btn btn btn-primary">Pay Now</a>
                     </div>
                 </div>
             </div>
