--- a/public/css/space.css
+++ b/public/css/space.css
@@ -13,13 +13,17 @@
 }
 .space-image{
 }
+.space-carousel{
+    background-size: cover;
+    background-position: center;
+    padding-top: 40%;
+}
 
 .tales {
   width: 100%;
 }
 .carousel-inner {
   width:100%;
-  max-height: 500px !important;
 }
 
 .carousel-inner img{
